<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_us">Tentang Kami</string>
    <string name="tujuan_aplikasi">Aplikasi ini bertujuan untuk memberikan informasi mengenai luas daerah dampak Tsunami tahun 2018 pada Desa Kunjir, Kalianda, Lampung Selatan</string>
    <string name="pengembang">Developer</string>
    <string name="developer">Nanda Kista Permana (1715061015)</string>
    <string name="tujuan_khusus">Adapun tujuan khusus dari pembuatan aplikasi ini adalah untuk memenuhi kurikulum dari mata kuliah Sistem Informasi Geografis di Program Studi Teknik Informatika Universitas Lampung</string>
</resources>