<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/layouttb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/design_default_color_primary">
        <ImageView
            android:id="@+id/tb_AboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_gravity="center_vertical"
            android:paddingStart="20dp"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about_us"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="@android:dimen/app_icon_size"
            android:paddingEnd="?attr/actionBarSize"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_content_aboutUs"
        android:layout_below="@+id/layouttb"
        android:layout_above="@id/layout_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <ImageView
                android:layout_marginVertical="35dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_favorites"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tujuan"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tujuan_aplikasi"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tujuan Khusus"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tujuan_khusus"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengembang"
                style="@style/h2TextTheme"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adapun developer dari aplikasi ini adalah :"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/developer"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/layout_copyright"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingVertical="24dp"
        android:text="@string/copyright"/>

</RelativeLayout>